compiler/w_session/tests/errors/void-function-typecheck.stderr
tests/errors/void-function-typecheck.w:1:18: error: type mismatch
fn main()    { 1 }
                 ^
tests/errors/void-function-typecheck.w:1:10: error: type mismatch
fn main()    { 1 }
         ^
